# xb-priscilla

./: CMakeLists.txt  README.md  config.json  vcpkg.json
app/include/application/common/core/: Mediator.hpp
app/include/application/common/interfaces/: IRequestHandler.hpp
app/include/application/xb-priscilla/queries/GetResponseFromPriscilla/: GetResponseFromPriscilla.hpp
